Add simple client

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-servers = ["192.168.1.1:8080", "192.168.2.2:8080"]
-num_malicious = 1
-num_faulty = 1
+servers = ["172.17.0.2:8080"]
+num_malicious = 0
+num_faulty = 0
 block_size = 128
