Add libfuse & spdlog to CMakeFiles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ SET(CMAKE_CXX_FLAGS "-g -O2 -Wall -std=c++17")
 
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 include(FetchContentExclude)
+include(FindPkgConfig)
 
 # grpc
 FetchContent_Declare(
@@ -22,8 +23,16 @@ set(_PROTOBUF_PROTOC $<TARGET_FILE:protoc>)
 set(_GRPC_GRPCPP grpc++)
 set(_GRPC_CPP_PLUGIN_EXECUTABLE $<TARGET_FILE:grpc_cpp_plugin>)
 
+# spdlog
+FetchContent_Declare(
+  spdlog
+  URL "https://github.com/gabime/spdlog/archive/refs/tags/v1.12.0.zip"
+)
+FetchContent_MakeAvailable_Exclude(spdlog)
+
 find_package(Threads REQUIRED)
 find_package(OpenSSL REQUIRED)
+pkg_search_module(FUSE REQUIRED fuse3)
 
 # Proto file
 get_filename_component(filesys_proto "${PROJECT_SOURCE_DIR}/protos/filesys.proto" ABSOLUTE)
@@ -44,9 +53,10 @@ add_custom_command(
         "${filesys_proto}"
       DEPENDS "${filesys_proto}")
 
-# Include generated *.pb.h files
+# Include generated *.pb.h files & fuse
 include_directories("${CMAKE_CURRENT_BINARY_DIR}")
 include_directories("${CMAKE_SOURCE_DIR}/include")
+include_directories(${FUSE_INCLUDE_DIRS})
 
 file(GLOB filesys_src CONFIGURE_DEPENDS "${CMAKE_SOURCE_DIR}/src/*.cc")
 list(REMOVE_ITEM filesys_src "${CMAKE_SOURCE_DIR}/src/filesys_server.cc"
@@ -56,29 +66,22 @@ add_library(filesys_helper "${filesys_src}")
 target_link_libraries(filesys_helper crypto)
 
 # filesys_grpc_proto
+set(GRPC_LIBRARIES ${_REFLECTION} ${_GRPC_GRPCPP} ${_PROTOBUF_LIBPROTOBUF})
 add_library(filesys_grpc_proto
   ${filesys_grpc_srcs}
   ${filesys_grpc_hdrs}
   ${filesys_proto_srcs}
   ${filesys_proto_hdrs})
-target_link_libraries(filesys_grpc_proto
-  ${_REFLECTION}
-  ${_GRPC_GRPCPP}
-  ${_PROTOBUF_LIBPROTOBUF})
+target_link_libraries(filesys_grpc_proto ${GRPC_LIBRARIES})
 
 # Targets filesys_(client|server)
-foreach(_target
-    filesys_client filesys_server)
-  add_executable(${_target}
-    "${CMAKE_SOURCE_DIR}/src/${_target}.cc")
-  target_link_libraries(${_target}
-    filesys_grpc_proto
-    filesys_helper
-    ${_REFLECTION}
-    ${_GRPC_GRPCPP}
-    ${_PROTOBUF_LIBPROTOBUF})
-endforeach()
+set(COMMON_LIBRARIES filesys_grpc_proto filesys_helper spdlog::spdlog)
+add_executable(filesys_server "${CMAKE_SOURCE_DIR}/src/filesys_server.cc")
+add_executable(filesys_client "${CMAKE_SOURCE_DIR}/src/filesys_client.cc")
+target_link_libraries(filesys_server ${COMMON_LIBRARIES})
+target_link_libraries(filesys_client ${COMMON_LIBRARIES} ${FUSE_LIBRARY_DIRS})
 
+# Test executables
 file(GLOB ENCODE_SRC_FILES ${PROJECT_SOURCE_DIR}/src/encode* ${PROJECT_SOURCE_DIR}/src/signature* ${PROJECT_SOURCE_DIR}/src/reed*)
 add_executable(encode_test ${ENCODE_SRC_FILES})
 target_link_libraries(encode_test crypto)
