Fix compile on Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.11)
 project(Filesys C CXX)
 
-SET(CMAKE_CXX_FLAGS "-g -O2 -Wall -std=c++17 -D_FILE_OFFSET_BITS=64 -DFUSE_USE_VERSION=26 -D_DARWIN_USE_64_BIT_INODE")
+set(CMAKE_CXX_FLAGS "-g -O2 -Wall -std=c++17")
 
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 include(FetchContentExclude)
@@ -94,9 +94,15 @@ target_link_libraries(BFRFileSystem ${COMMON_LIBRARIES})
 
 # Targets filesys_(client|server)
 add_executable(filesys_server "${CMAKE_SOURCE_DIR}/src/filesys_server.cc")
-add_executable(filesys_client "${CMAKE_SOURCE_DIR}/src/filesys_client.cc")
+add_executable(filesys_client "${CMAKE_SOURCE_DIR}/src/filesys_client.cc" "${CMAKE_SOURCE_DIR}/src/BFRFileSystem.cc")
 target_link_libraries(filesys_server ${COMMON_LIBRARIES})
-target_link_libraries(filesys_client ${COMMON_LIBRARIES} ${FUSE_LIBRARY_DIRS})
+target_link_libraries(filesys_client ${COMMON_LIBRARIES} ${FUSE_LIBRARIES})
+
+if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+  target_compile_definitions(filesys_client PRIVATE _FILE_OFFSET_BITS=64 FUSE_USE_VERSION=26 _DARWIN_USE_64_BIT_INODE)
+else()
+  target_compile_definitions(filesys_client PRIVATE FUSE_USE_VERSION=31)
+endif()
 
 # Test executables
 file(GLOB ENCODE_SRC_FILES ${PROJECT_SOURCE_DIR}/src/encode* ${PROJECT_SOURCE_DIR}/src/signature* ${PROJECT_SOURCE_DIR}/src/reed*)
