WIP file IO error

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-servers = ["172.17.0.2:8080", "172.17.0.2:8081", "172.17.0.2:8082", "172.17.0.2:8083"]
+servers = ["172.17.0.2:8080"]
 num_malicious = 0
 num_faulty = 0
 block_size = 128
